Added pointer cursor to voting select.

--- a/modules/custom/voting_webform/css/rating.css
+++ b/modules/custom/voting_webform/css/rating.css
@@ -23,6 +23,7 @@ div.svg div.rateit-range {
 }
 
 div.svg div.rateit-hover {
+  cursor: pointer;
   background: url(https://open.canada.ca/profiles/og/modules/custom/voting_webform/images/rating/mapleleaf-hover.svg) !important;
 }
 
